# pysidealchemy

./: .env.example  .gitattributes  .gitignore  PySideAlchemy.spec  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
db/: base.py  create_db.py
db/models/: order_products.py  orders.py  products.py  users.py
models_qt/: orders_model.py  products_model.py  users_model.py
services/: auth_service.py  user_service.py
tests/: test_auth_service.py  test_export.py  test_user_service.py
ui/: add_order_dialog.py  add_product_dialog.py  add_user_dialog.py  edit_order_dialog.py  login_dialog.py  main_window.py  orders_view.py  products_view.py  secure_tab_bar.py  users_view.py
utils/: config.py  export.py
